# wine-android

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/bugly/: BuglySymtabLog.txt  BuglyUploadLog.txt
app/release/: app-release.apk  gobang.apk  output.json  五子棋内测.apk  土豆五子棋.apk
app/src/main/: AndroidManifest.xml
app/src/main/java/com/potato/wuziqi/: AI.java  AICallBack.java  FiveChessView.java  GameCallBack.java  MainActivity.java
app/src/main/jni/: AIWine.cpp  AIWine.h  Board.cpp  Board.h  ChessShape.cpp  HashTable.h  native-lib.cpp
app/src/main/res/drawable/: btn_bg_red.xml
app/src/main/res/layout/: activity_main.xml  pop_choose_chess.xml
app/src/main/res/values/: colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
